--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <version>1.0-SNAPSHOT</version>
 
   <name>unesco</name>
-  <description>Project to solve Cazoo's assessment</description>
+  <description>Unesco project</description>
   <url>to do</url>
 
   <properties>
@@ -46,7 +46,7 @@
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-log4j12</artifactId>
+      <artifactId>slf4j-reload4j</artifactId>
       <version>2.0.0-alpha7</version>
     </dependency>
 
