--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
       <version>1.18.22</version>
       <scope>provided</scope>
     </dependency>
+
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-reload4j</artifactId>
@@ -85,6 +86,13 @@
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
+          <annotationProcessorPaths>
+            <path>
+              <groupId>org.projectlombok</groupId>
+              <artifactId>lombok</artifactId>
+              <version>1.18.22</version>
+            </path>
+          </annotationProcessorPaths>
           <showDeprecation>true</showDeprecation>
           <source>1.8</source>
           <target>1.8</target>
@@ -217,6 +225,20 @@
             <phase>compile</phase>
           </execution>
         </executions>
+      </plugin>
+
+      <!--- surefire -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M5</version>
+        <dependencies>
+          <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.8.2</version>
+          </dependency>
+        </dependencies>
       </plugin>
 
     </plugins>
